--- a/global/css/default.less
+++ b/global/css/default.less
@@ -21,3 +21,8 @@
     background-color:grey;
     background-image:url('images/footer.jpg');
 }
+.navholder
+{
+    min-width:280px;
+    padding-top:15px;
+}
