--- a/global/css/default.css
+++ b/global/css/default.css
@@ -19,4 +19,8 @@
   background-color: grey;
   background-image: url('images/footer.jpg');
 }
+.navholder {
+  min-width: 280px;
+  padding-top: 15px;
+}
 /*# sourceMappingURL=default.css.map */
