--- a/global/css/default.less
+++ b/global/css/default.less
@@ -2,6 +2,7 @@
     margin:0;
     padding:0;
 }
+@menu_button_color:#f7ba00;
 /* Widgets */
 /* Layout Widge */
 #mainBody
@@ -55,7 +56,7 @@
 }
 #bottomcol4
 {
-    background-color:#f7ba00;
+    background-color:@menu_button_color
 }
 #bottomcol5
 {
@@ -134,6 +135,7 @@
 /* menu button */
 #btnMenu
 {
+    cursor:pointer;
     &>div
     {
         float:left;
@@ -154,6 +156,63 @@
         margin:5px 0 0 0;
     }
 }
+/* Menu */
+#menuholder
+{
+    position:absolute;
+    top:125px;
+    left:0;
+    width:250px;
+    background-color:rgb(60, 119, 182);
+    color:rgb(220, 228, 237);
+
+    & .title{
+        background-color:@menu_button_color;
+        color:white;
+        padding:10px;
+        font-size:17px;
+    }
+    & #menulistholder
+    {
+        padding:10px;       
+
+        & .list
+        {
+            max-height:200px;
+            overflow-y:auto;
+
+            &>div
+            {
+                margin-bottom:5px;
+                cursor:pointer;
+                &:before
+                {
+                    content:"\25CA";
+                    font-size:18px;
+                    margin-right:4px;
+                    color:@menu_button_color;
+                }
+                &[current]
+                {                   
+                    cursor:default;
+                    font-weight:bold;
+                    &:before
+                    {
+                        content:"\2666";
+                        font-size:18px;
+                        margin-right:4px;
+                    }
+                }
+                &:hover{
+                    &:before{
+                        content:"\2666";
+                        font-size:18px;
+                    }
+                }
+            }
+        }
+    }
+}
 /* Content */
 .bold-text
 {
@@ -171,3 +230,4 @@
 {
     padding-top:10px;
 }
+
