Demo intergation started

--- a/global/css/default.css
+++ b/global/css/default.css
@@ -52,6 +52,16 @@
 #bottomcol6 {
   background-color: #f3ca3e;
 }
+/* Logo */
+.logo {
+  width: 156px;
+  height: 67px;
+  margin-left: 44px;
+  margin-top: 20px;
+}
+.logo > img {
+  width: 100%;
+}
 /* Nav buttons */
 #backnextholder {
   position: relative;
