--- a/global/css/default.less
+++ b/global/css/default.less
@@ -66,6 +66,20 @@
 {
     background-color:#f3ca3e;
 }
+/* Logo */
+.logo
+{
+    width:156px;
+    height:67px;
+
+    margin-left:44px;
+    margin-top:20px;
+
+    &>img
+    {
+        width:100%;
+    }
+}
 /* Nav buttons */
 #backnextholder
 {
