--- a/en/style/custom.less
+++ b/en/style/custom.less
@@ -1,11 +1,95 @@
-﻿/* page 1 */
-.page1_txt1
-{    
-    font-size: 274%;
+﻿.borderRadoius(@m)
+{
+    -moz-border-radius: @m;
+    -webkit-border-radius: @m;
+    border-radius: @m;
+}
+.boxShadow(@color, @left,@bottom,@blur, @width) {
+    -moz-box-shadow: @color @left @bottom @blur @width;
+    -webkit-box-shadow: @color @left @bottom @blur @width;
+    box-shadow: @color @left @bottom @blur @width;
+}
+/* page 1 */
+.page1_txt1_0
+{
     font-weight: bold;
+    max-width: 650px;
+    width:90%;
     text-align: center;
-    height: 35px;
     position: relative;
-    margin-top: 8%;
+    margin-top: 100px;
+    margin-bottom:30px;
+    margin-left:auto;
+    margin-right:auto;
     display: block;
+    font-size: 40%; 
+
+    border-color:white;
+    border-style: solid;
+    border-width: 5px;
+}
+.page1_txt1_1 {
+    font-size: 274%;
+    -moz-transition: font-size 1s;
+    -o-transition: font-size 1s;
+    -webkit-transition: font-size 1s;
+    transition: font-size 1s;
+}
+.page1_txt1_2 {
+    margin-top: 0;
+    -moz-transition: margin-top 1s;
+    -o-transition: margin-top 1s;
+    -webkit-transition: margin-top 1s;
+    transition: margin-top 1s;
+}
+.page1_txt1border
+{
+   
+    background-color:rgb(243, 247, 213);
+    border-color:rgb(0, 108, 175);
+    border-style: solid;
+    border-width: 5px;
+     .borderRadoius(15px);
+}
+.page1_table {
+    max-width: 650px;
+    width:90%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgb(243, 247, 213);
+    border-color: rgb(72, 169, 66);
+    border-style: solid;
+    border-width: 5px;
+    padding: 10px;
+    .borderRadoius(15px);
+
+    & > table {
+        width: 100%;
+
+        & td
+        {
+            padding:8px;
+
+            &:nth-child(2) div
+            {
+                background-color:white;
+                padding:5px;
+            }
+        }
+    }
+
+}
+/* page 3 */
+.page3_blueText
+{
+    background-color:rgb(2, 85, 152);
+    color:white;
+    .borderRadoius(15px);
+    padding: 5px 10px 5px 10px;
+}
+.page3_green
+{
+    background-color:rgb(107, 192, 97);
+    .borderRadoius(15px);
+    padding: 5px 10px 5px 10px;
 }
